testsuite/tests/typecheck/should_fail/T18723a.hs
module T18723a where

data T1 = MkT1
  ( Int, Int, Int, Int, Int, Int, Int, Int, Int, Int
  , Int, Int, Int, Int, Int, Int, Int, Int, Int, Int
  , Int, Int, Int, Int, Int, Int, Int, Int, Int, Int
  , Int, Int, Int, Int, Int, Int, Int, Int, Int, Int
  , Int, Int, Int, Int, Int, Int, Int, Int, Int, Int
  , Int, Int, Int, Int, Int, Int, Int, Int, Int, Int
  , Int, Int, Int
  )
